[package]
name = "android_winit_test"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.26"

[target.'cfg(target_os = "android")'.dependencies]
ndk-glue = "0.5.0"